crates/keron-lang/tests/corpus/errors/check/union_assignment_with_unknown_variant.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `"yellow"` is not a variant of `Color` (expected one of `"red"`, `"green"`, `"blue"`)
  --> 3:16
  |
3 | val c: Color = "yellow"
  |                ^^^^^^^^
